--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                 </div>
                 <!--right buttons--> 
                 <div class="nav-buttons">
-                    <a href="html/listing.html">
-                        <button class="sell-button">Sell an item</button>
-                    </a>
+                    <a href="html/listing.html" class="sell-button">Sell an item</a>
                     <!--guest navbar-->
                     <div id="guestNav">
                         <button class="auth-button" id="navSignIn">Sign in</button>
@@ -76,9 +74,9 @@
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="html/products.html?category=Sofas&subcategory=Fabric Sofas">Fabric Sofas</a></li>
-                            <li><a href="html/products.html?category=Sofas&subcategory=Leather Sofas">Leather Sofas</a></li>
-                            <li><a href="html/products.html?category=Sofas&subcategory=Metal Sofas">Metal Sofas</a></li>
+                            <li><a href="html/products.html?category=Sofas&subcategory=Fabric%20Sofas">Fabric Sofas</a></li>
+                            <li><a href="html/products.html?category=Sofas&subcategory=Leather%20Sofas">Leather Sofas</a></li>
+                            <li><a href="html/products.html?category=Sofas&subcategory=Metal%20Sofas">Metal Sofas</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -86,10 +84,10 @@
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="html/products.html?category=Tables&subcategory=Dining Tables">Dining Tables</a></li>
-                            <li><a href="html/products.html?category=Tables&subcategory=Side Tables">Side Tables</a></li>
-                            <li><a href="html/products.html?category=Tables&subcategory=CoffeeTables">Coffee Tables</a></li>
-                            <li><a href="html/products.html?category=Tables&subcategory=Study Tables">Study Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Dining%20Tables">Dining Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Side%20Tables">Side Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Coffee%20Tables">Coffee Tables</a></li>
+                            <li><a href="html/products.html?category=Tables&subcategory=Study%20Tables">Study Tables</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -97,10 +95,10 @@
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="html/products.html?category=Chairs&subcategory=Dining Chairs">Dining Chairs</a></li>
+                            <li><a href="html/products.html?category=Chairs&subcategory=Dining%20Chairs">Dining Chairs</a></li>
                             <li><a href="html/products.html?category=Chairs&subcategory=Stools">Stools</a></li>
                             <li><a href="html/products.html?category=Chairs&subcategory=Benches">Benches</a></li>
-                            <li><a href="html/products.html?category=Chairs&subcategory=Office Chairs">Office Chairs</a></li>
+                            <li><a href="html/products.html?category=Chairs&subcategory=Office%20Chairs">Office Chairs</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -108,7 +106,7 @@
                             <img src="images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="html/products.html?category=Beds&subcategory=Bed Frames">Bed Frames</a></li>
+                            <li><a href="html/products.html?category=Beds&subcategory=Bed%20Frames">Bed Frames</a></li>
                             <li><a href="html/products.html?category=Beds&subcategory=Mattresses">Mattresses</a></li>
                         </ul>
                     </li>
@@ -120,7 +118,7 @@
                             <li><a href="html/products.html?category=Decors&subcategory=Accessories">Accessories</a></li>
                             <li><a href="html/products.html?category=Decors&subcategory=Lamps">Lamps</a></li>
                             <li><a href="html/products.html?category=Decors&subcategory=Mirrors">Mirrors</a></li>
-                            <li><a href="html/products.html?category=Decors&subcategory=Pillow Cushions">Pillow Cushions</a></li>
+                            <li><a href="html/products.html?category=Decors&subcategory=Pillow%20Cushions">Pillow Cushions</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -146,9 +144,7 @@
             <div class="hero-text">
                 <h1>DISCOVER YOUR DREAM ROOM</h1>
                 <p>Your journey to a beautiful home begins here.</p>
-                <a href="html/showroom.html">
-                    <button class="hero-button">SEE OUR SPACES</button>
-                <a>
+                <a href="html/showroom.html" class="hero-button">SEE OUR SPACES</a>
             </div>
             <button class="next-button">❯</button>
         </section>
@@ -235,16 +231,12 @@
             <div class="list-listings">
                 <h3>Give your furniture a new home.</h3>
                 <p>Sell your pre-loved items easily.</p>
-                <a href="html/listing.html">
-                    <button>LIST YOUR ITEM</button>
-                </a>
+                <a href="html/listing.html" class="list-button">LIST YOUR ITEM</a>
             </div>
             <div class="browse-listings">
                 <h3>Find treasures for less.</h3>
                 <p>Quality second-hand furniture at great prices.</p>
-                <a href="html/products.html">
-                    <button>BROWSE LISTINGS</button>
-                </a>
+                <a href="html/products.html" class="browse-button">BROWSE LISTING</a>
             </div>
         </section>
         <!--how it works section-->
@@ -340,7 +332,7 @@
             <div id="emptyCartLottie"></div>
             <h3>Your cart is empty</h3>
             <p>Looks like you haven't added any items yet</p>
-            <button class="continue-shopping"><a href="html/products.html">Continue Shopping</a></button>
+            <a href="html/products.html" class="continue-shopping">Continue Shopping</a>
         </div>
         <!--cart summary-->
         <div class="cart-summary">
@@ -370,7 +362,7 @@
             </div>
             <!--checkout button-->
             <button id="checkoutButton" class="checkout-button">
-                Continue to check out
+                Continue to checkout
             </button>
         </div>
     </div>
@@ -397,12 +389,8 @@
 
     <!--fixed buttons section-->
     <div class="fixed-buttons">
-        <a href="html/game.html">
-            <button class="fixed-button"><img src="images/icons/game-icon.png" alt="game-icon"></button>
-        </a>
-        <a href="html/listing.html">
-            <button class="fixed-button"><img src="images/icons/listing-icon.png" alt="listing-icon"></button>
-        </a>
+        <a href="html/game.html" class="fixed-button"><img src="images/icons/game-icon.png" alt="game-icon"></a>
+        <a href="html/listing.html" class="fixed-button"><img src="images/icons/listing-icon.png" alt="listing-icon"></a>
     </div>
     <!--registration popup section-->
     <div id="popupOverlay" class="popup-overlay"></div>
@@ -412,7 +400,7 @@
     <div id="registrationPopup" class="popup">
         <div class="popup-container">
             <div class="popup-logo">
-                <img src="images/others/mokesell-logo-popup.png">
+                <img src="images/others/mokesell-logo-popup.png" alt="mokesell logo">
             </div>
             <span class="close-button">X</span>
             <div class="popup-header">
