--- a/html/products.html
+++ b/html/products.html
@@ -34,9 +34,7 @@
                 </div>
                 <!--right buttons--> 
                 <div class="nav-buttons">
-                    <a href="../html/listing.html">
-                        <button class="sell-button">Sell an item</button>
-                    </a>
+                    <a href="../html/listing.html" class="sell-button">Sell an item</a>
                     <div id="guestNav">
                         <button class="auth-button" id="navSignIn">Sign in</button>
                         <button class="auth-button" id="navSignUp">Sign up</button>
@@ -74,9 +72,9 @@
                             <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Sofas&subcategory=Fabric Sofas">Fabric Sofas</a></li>
-                            <li><a href="../html/products.html?category=Sofas&subcategory=Leather Sofas">Leather Sofas</a></li>
-                            <li><a href="../html/products.html?category=Sofas&subcategory=Metal Sofas">Metal Sofas</a></li>
+                            <li><a href="../html/products.html?category=Sofas&subcategory=Fabric%20Sofas">Fabric Sofas</a></li>
+                            <li><a href="../html/products.html?category=Sofas&subcategory=Leather%20Sofas">Leather Sofas</a></li>
+                            <li><a href="../html/products.html?category=Sofas&subcategory=Metal%20Sofas">Metal Sofas</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -84,10 +82,10 @@
                             <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Tables&subcategory=Dining Tables">Dining Tables</a></li>
-                            <li><a href="../html/products.html?category=Tables&subcategory=Side Tables">Side Tables</a></li>
-                            <li><a href="../html/products.html?category=Tables&subcategory=CoffeeTables">Coffee Tables</a></li>
-                            <li><a href="../html/products.html?category=Tables&subcategory=Study Tables">Study Tables</a></li>
+                            <li><a href="../html/products.html?category=Tables&subcategory=Dining%20Tables">Dining Tables</a></li>
+                            <li><a href="../html/products.html?category=Tables&subcategory=Side%20Tables">Side Tables</a></li>
+                            <li><a href="../html/products.html?category=Tables&subcategory=Coffee%20Tables">Coffee Tables</a></li>
+                            <li><a href="../html/products.html?category=Tables&subcategory=Study%20Tables">Study Tables</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -95,10 +93,10 @@
                             <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Chairs&subcategory=Dining Chairs">Dining Chairs</a></li>
+                            <li><a href="../html/products.html?category=Chairs&subcategory=Dining%20Chairs">Dining Chairs</a></li>
                             <li><a href="../html/products.html?category=Chairs&subcategory=Stools">Stools</a></li>
                             <li><a href="../html/products.html?category=Chairs&subcategory=Benches">Benches</a></li>
-                            <li><a href="../html/products.html?category=Chairs&subcategory=Office Chairs">Office Chairs</a></li>
+                            <li><a href="../html/products.html?category=Chairs&subcategory=Office%20Chairs">Office Chairs</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -106,7 +104,7 @@
                             <img src="../images/icons/dropdown-icon.png" alt="dropdown button">
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="../html/products.html?category=Beds&subcategory=Bed Frames">Bed Frames</a></li>
+                            <li><a href="../html/products.html?category=Beds&subcategory=Bed%20Frames">Bed Frames</a></li>
                             <li><a href="../html/products.html?category=Beds&subcategory=Mattresses">Mattresses</a></li>
                         </ul>
                     </li>
@@ -118,7 +116,7 @@
                             <li><a href="../html/products.html?category=Decors&subcategory=Accessories">Accessories</a></li>
                             <li><a href="../html/products.html?category=Decors&subcategory=Lamps">Lamps</a></li>
                             <li><a href="../html/products.html?category=Decors&subcategory=Mirrors">Mirrors</a></li>
-                            <li><a href="../html/products.html?category=Decors&subcategory=Pillow Cushions">Pillow Cushions</a></li>
+                            <li><a href="../html/products.html?category=Decors&subcategory=Pillow%20Cushions">Pillow Cushions</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -141,7 +139,7 @@
         <!--page title-->
         <h1 id="pageTitle">All Products</h1>
         <!--filter section-->
-        <section class="filter-container">
+        <div class="filter-container">
             <div class="filter">
                 <!--filter by price-->
                 <label for="filterPrice">Sort by Price:</label>
@@ -163,9 +161,9 @@
                     <option value="Heavily Used">Heavily Used</option>
                 </select>
             </div>
-        </section>
+        </div>
         <!--products section-->
-        <section class="product-grid" id="productGrid"></section>
+        <div class="product-grid" id="productGrid"></div>
         <!--load more button-->
         <button id="loadMoreBtn" class="load-more">Load More</button>
         <!--footer section-->
@@ -239,7 +237,7 @@
             <div id="emptyCartLottie"></div>
             <h3>Your cart is empty</h3>
             <p>Looks like you haven't added any items yet</p>
-            <button class="continue-shopping"><a href="../html/products.html">Continue Shopping</a></button>
+            <a href="../html/products.html" class="continue-shopping">Continue Shopping</a>
         </div>
         <!--cart summary-->
         <div class="cart-summary">
@@ -269,7 +267,7 @@
             </div>
             <!--checkout button-->
             <button id="checkoutButton" class="checkout-button">
-                Continue to check out
+                Continue to checkout
             </button>
         </div>
     </div>
@@ -296,12 +294,8 @@
 
     <!--fixed buttons section-->
     <div class="fixed-buttons">
-        <a href="../html/game.html">
-            <button class="fixed-button"><img src="../images/icons/game-icon.png" alt="game-icon"></button>
-        </a>
-        <a href="../html/listing.html">
-            <button class="fixed-button"><img src="../images/icons/listing-icon.png" alt="listing-icon"></button>
-        </a>
+        <a href="../html/game.html" class="fixed-button"><img src="../images/icons/game-icon.png" alt="game-icon"></a>
+        <a href="../html/listing.html" class="fixed-button"><img src="../images/icons/listing-icon.png" alt="listing-icon"></a>
     </div>
     <!--registration popup section-->
     <div id="popupOverlay" class="popup-overlay"></div>
@@ -310,7 +304,7 @@
     <div id="registrationPopup" class="popup">
         <div class="popup-container">
             <div class="popup-logo">
-                <img src="../images/others/mokesell-logo-popup.png">
+                <img src="../images/others/mokesell-logo-popup.png" alt="mokesell logo">
             </div>
             <span class="close-button">X</span>
             <div class="popup-header">
