--- a/html/contact.html
+++ b/html/contact.html
@@ -180,13 +180,13 @@
                     </a>
                 </address>
                 <div class="social-links">
-                    <a href="#" class="social-icon linkedin">
+                    <a href="https://www.linkedin.com/company/ikea/?originalSubdomain=nl" class="social-icon linkedin" target="_blank" rel="noopener noreferrer">
                         <img src="../images/icons/linkedin-icon.png" alt="LinkedIn">
                     </a>
-                    <a href="#" class="social-icon facebook">
+                    <a href="https://www.facebook.com/IKEASingapore" class="social-icon facebook" target="_blank" rel="noopener noreferrer">
                         <img src="../images/icons/facebook-icon.png" alt="Facebook">
                     </a>
-                    <a href="#" class="social-icon instagram">
+                    <a href="https://www.instagram.com/ikeasingapore/?hl=en" class="social-icon instagram" target="_blank" rel="noopener noreferrer">
                         <img src="../images/icons/instagram-icon.png" alt="Instagram">
                     </a>
                 </div>
@@ -328,9 +328,9 @@
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
                 <div class="social-icons">
-                    <a href="#" target="_blank" class="icon"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
-                    <a href="#" target="_blank" class="icon"><img src="../images/icons/twitter-icon.png" alt="Twitter"></a>
-                    <a href="#" target="_blank" class="icon"><img src="../images/icons/facebook-icon.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/ikeasingapore/?hl=en" target="_blank" rel="noopener noreferrer" class="icon"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
+                    <a href="https://x.com/IKEA?&mx=2" target="_blank" rel="noopener noreferrer" class="icon"><img src="../images/icons/twitter-icon.png" alt="Twitter"></a>
+                    <a href="https://www.facebook.com/IKEASingapore" target="_blank" rel="noopener noreferrer" class="icon"><img src="../images/icons/facebook-icon.png" alt="Facebook"></a>
                 </div>
                 <!--copyright-->
                 <div class="copyright">
