--- a/html/order-confirmation.html
+++ b/html/order-confirmation.html
@@ -206,9 +206,9 @@
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
                 <div class="social-icons">
-                    <a href="#" target="_blank" class="icon"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
-                    <a href="#" target="_blank" class="icon"><img src="../images/icons/twitter-icon.png" alt="Twitter"></a>
-                    <a href="#" target="_blank" class="icon"><img src="../images/icons/facebook-icon.png" alt="Facebook"></a>
+                    <a href="https://www.instagram.com/ikeasingapore/?hl=en" target="_blank" rel="noopener noreferrer" class="icon"><img src="../images/icons/instagram-icon.png" alt="Instagram"></a>
+                    <a href="https://x.com/IKEA?&mx=2" target="_blank" rel="noopener noreferrer" class="icon"><img src="../images/icons/twitter-icon.png" alt="Twitter"></a>
+                    <a href="https://www.facebook.com/IKEASingapore" target="_blank" rel="noopener noreferrer" class="icon"><img src="../images/icons/facebook-icon.png" alt="Facebook"></a>
                 </div>
                 <!--copyright-->
                 <div class="copyright">
